samples/bookmap/invalid/R4.dita
<?xml version="1.0" encoding="UTF-8"?>
<bookmap>
  <booktitle>
    <booklibrary>Lib</booklibrary>
    <booktitlealt>Alt Title</booktitlealt> {/* Incorrect order */}
    <mainbooktitle>Title</mainbooktitle>
  </booktitle>
  <bookmeta/>
  <frontmatter/>
  <chapter href="c.dita"><topicmeta><navtitle>C</navtitle></topicmeta></chapter>
</bookmap>